Fixed layout error where the navBar would be behind the header logo when closing.

--- a/src/css/NavBar.module.css
+++ b/src/css/NavBar.module.css
@@ -13,6 +13,7 @@
     top: 0;
     transform: translateY(-100%);
     transition: all 0.2s ease-in-out;
+    z-index: 100;
 }
 .nav-bar--disabled:after{
     opacity: 0;
